# local-cameras-view

./: README.md  cameras.xlsx  main.py  pyproject.toml  rtsp.txt  test_opencv.py
constants/: camera.py  paths.py
utils/: camera_stream_manager.py  config.py  construct_rtsp_url.py  status_endpoint.py
