[project]
name = "local-camera-view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastexcel>=0.14.0",
    "opencv-python>=4.12.0.88",
    "polars>=1.32.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
